--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,11 @@
+#text2{
+	display : none;
+}
+#text1{
+	display : none;
+}
+
+
 .dropbtn {
   background-color: white;
   color: black;
@@ -55,6 +63,8 @@ body {
   margin: 0px;
   font-family: 'Raleway', sans-serif;
 }
+
+
 
 .text-right {
   text-align: right;
